agregado framework de automatizacion

--- a/pom.xml
+++ b/pom.xml
@@ -106,12 +106,12 @@
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <includes>
-                        <include>**/**jetsmartRunner.java</include>
+                        <include>**/reg_001_jetsmartRunner.java</include>
                     </includes>
-                    <!--<parallel>methods</parallel>
+                    <parallel>methods</parallel>
                     <threadCount>4</threadCount>
                     <useUnlimitedThreads>false</useUnlimitedThreads>
-                    <suiteXmlFiles>
+                    <!--<suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>-->
                 </configuration>
