--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,19 @@
             <artifactId>poi-ooxml</artifactId>
             <version>4.1.2</version>
         </dependency>
+        <!-- WEBDRIVER MANAGER -->
+        <!-- https://github.com/bonigarcia/webdrivermanager#motivation -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/selenium-jupiter -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>selenium-jupiter</artifactId>
+            <version>3.3.4</version>
+        </dependency>
     </dependencies>
 
     <build>
