--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <version>4.1.2</version>
         </dependency>
         <!-- WEBDRIVER MANAGER -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
         <!-- https://github.com/bonigarcia/webdrivermanager#motivation -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
