--- a/pom.xml
+++ b/pom.xml
@@ -87,9 +87,8 @@
     </dependencies>
 
     <build>
+        <finalName>maven-bdd-test</finalName>
         <plugins>
-
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -106,15 +105,15 @@
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <includes>
-                        <include>**/reg_001_jetsmartRunner.java</include>
+                        <include>**/jetSmart_regresion001.java</include>
                     </includes>
-                    <parallel>methods</parallel>
+                    <!--<parallel>methods</parallel>
                     <threadCount>4</threadCount>
                     <useUnlimitedThreads>false</useUnlimitedThreads>
-                    <!--<suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
-                    </suiteXmlFiles>-->
-                </configuration>
+                <suiteXmlFiles>
+                     <suiteXmlFile>testng.xml</suiteXmlFile>
+                 </suiteXmlFiles>-->
+             </configuration>
             </plugin>
 
 
