sesion 6: explicacion cucumber y tarea de transformacion testcases a historias de usuario

--- a/pom.xml
+++ b/pom.xml
@@ -104,15 +104,15 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
                 <configuration>
-                    <includes>
-                        <include>**/jetSmart_regresion001.java</include>
+                    <!--<includes>
+                        <include>**/jetSmart_**.java</include>
                     </includes>
-                    <!--<parallel>methods</parallel>
+                    <parallel>methods</parallel>
                     <threadCount>4</threadCount>
-                    <useUnlimitedThreads>false</useUnlimitedThreads>
+                    <useUnlimitedThreads>false</useUnlimitedThreads>-->
                 <suiteXmlFiles>
-                     <suiteXmlFile>testng.xml</suiteXmlFile>
-                 </suiteXmlFiles>-->
+                     <suiteXmlFile>testngEquipo2.xml</suiteXmlFile>
+                 </suiteXmlFiles>
              </configuration>
             </plugin>
 
