--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <includes>
-                        <include>**/reg_001_jetsmartRunner.java</include>
+                        <include>**/Runners_JetSmartG2.java</include>
                     </includes>
                     <parallel>methods</parallel>
                     <threadCount>4</threadCount>
