Modulo Vuelo Ok, Test operativos - se cambio POM para hacer test maven.

--- a/pom.xml
+++ b/pom.xml
@@ -106,13 +106,13 @@
                 <version>${maven.surefire.version}</version>
                 <configuration>
                     <includes>
-                        <include>**/reg_001_jetsmartRunner.java</include>
+                        <include>**/Runners_JetSmartG2.java</include>
                     </includes>
                     <parallel>methods</parallel>
                     <threadCount>4</threadCount>
                     <useUnlimitedThreads>false</useUnlimitedThreads>
                     <!--<suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>testngEquipo2.xml</suiteXmlFile>
                     </suiteXmlFiles>-->
                 </configuration>
             </plugin>
